--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "dtcc-docker"]
 	path = dtcc-docker
 	url = https://gitlab.com/dtcc-platform/dtcc-docker.git
+[submodule "dtcc-model"]
+	path = dtcc-model
+	url = https://gitlab.com/dtcc-platform/dtcc-model.git
