--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,4 +5,4 @@ upload to s3:
   script:
     - aws configure set region us-east-1
     - touch foo.txt
-    - aws s3 cp foo.txt s3://$mybucket/foo.txt
+    - aws s3 cp foo.txt s3://$S3_BUCKET/foo.txt
