--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,4 +50,4 @@ test_async:
     #- npm install
     #- node ./specs/start.js ./specs/db-postgres.spec.js
 variables:
-     GIT_SUBMODULE_STRATEGY: recursive
+     GIT_SUBMODULE_STRATEGY: normal 
