added submodule update trigger to gitlab-ci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,125 @@
+variables:
+  # https://hub.docker.com/r/alpine/git/tags
+  GIT_VERSION: v2.30.1
+
+  # TODO - Need to move the varables in gitlab CI/CD variables
+  GITLAB_TOKEN: glpat-HghzTu-BX5UALdsZn7B7
+  GITLAB_USERNAME: sidkas
+  COMMIT_MESSAGE: Automatic submodule update triggered
+
 stages:
+  - update
   - build
   - deploy
 
+## --------------------------------------------------------------------------------------------------------------------
+######################################## Trigger on submodule update ##################################################
+
+# Before the build 
+# - for each submodule 
+#   - Check if there's a new commit 
+#   - Pull latest docs automatically into the dtcc-doc 
+#   - Push all the updates to remote
+
+## Description
+#   This script allows to store the artefacts of a step into the current repository
+
+# Set up this script
+#   1. Create a new personal access token (https://gitlab.com/-/profile/personal_access_tokens)
+#      with the following scopes:
+#        - read_repository
+#        - write_repository
+#   2. Inside Settings -> CI / CD -> Variables, create the following variables:
+#
+#   GITLAB_TOKEN          Personal access token previously created.             XGE2-k445hd5fbs94v9d
+#     (masked)
+#   GITLAB_USERNAME       Username associated with the personal access token.   ranb2002
+#   COMMIT_MESSAGE        Commit message                                        Automatic update from the weekly schedule
+
+# Other variables used by this script
+#   The following variables are defined automatically by GitLab CI. Thus, you
+#   don't need to override them.
+#
+#   CI_COMMIT_SHA         Commit SHA, to use a unique directory name.           e46f153dd47ce5f3ca8c56be3fb5d55039853655
+#   CI_DEFAULT_BRANCH     Default branch.                                       main
+#   CI_PROJECT_PATH       Current project path.                                 ranb2002/benjaminrancourt.ca
+#   CI_SERVER_HOST        Hostname of the current GitLab instance.              gitlab.com
+#   GITLAB_USER_EMAIL     Email of the user used to commit the changes to the   ranb2002@gitlab.com
+#                         secondary repository.
+#   GITLAB_USER_NAME      User name of the user used to commit the changes to   Benjamin Rancourt
+#                         the secondary repository.
+
+.git:push:
+  after_script:
+    # Go to the new directory
+    - cd "${CI_COMMIT_SHA}"
+
+    # Add all generated files to Git
+    - git add .
+
+    - |-
+      # Check if we have modifications to commit
+      CHANGES=$(git status --porcelain | wc -l)
+
+      if [ "$CHANGES" -gt "0" ]; then
+        # Show the status of files that are about to be created, updated or deleted
+        git status
+
+        # Commit all changes
+        git commit -m "${COMMIT_MESSAGE}"
+
+        # Update the repository and make sure to skip the pipeline create for this commit
+        git push origin "${CI_DEFAULT_BRANCH}" -o ci.skip
+      fi
+  before_script:
+    # Clone the repository via HTTPS inside a new directory
+    - git clone "https://${GITLAB_USERNAME}:${GITLAB_TOKEN}@${CI_SERVER_HOST}/${CI_PROJECT_PATH}.git" "${CI_COMMIT_SHA}"
+
+    # Set the displayed user with the commits that are about to be made
+    - git config --global user.email "${GIT_USER_EMAIL:-$GITLAB_USER_EMAIL}"
+    - git config --global user.name "${GIT_USER_NAME:-$GITLAB_USER_NAME}"
+  image:
+    entrypoint: ['']
+    name: alpine/git:${GIT_VERSION}
+  stage: update
+
+
+update:submodule:
+  extends: .git:push
+  rules:
+    - if: $UPDATE_SUBMODULE == "true"
+      when: never
+  script:
+    - cd "${CI_COMMIT_SHA}"
+    - git submodule update --init --recursive
+    - git submodule update --remote
+  stage: update
+
+update:references:
+  trigger:
+    branch: '${CI_DEFAULT_BRANCH}'
+    project: dtcc-platform/dtcc-builder
+    strategy: depend
+  stage: trigger
+  variables:
+    UPDATE_SUBMODULE: 'true'
+
+
+update:references:
+  parallel:
+    matrix:
+      - DOWNSTREAM_PROJECT: ["dtcc-platform/dtcc-builder", "dtcc-platform/dtcc-core", 
+                              "dtcc-platform/dtcc-model", "dtcc-platform/dtcc-viewer", 
+                              "dtcc-platform/dtcc-docker"]
+  trigger:
+    branch: '${CI_DEFAULT_BRANCH}'
+    project: $DOWNSTREAM_PROJECT
+    strategy: depend
+  stage: trigger
+  variables:
+    UPDATE_SUBMODULE: 'true'
+
+# ------------------
 #image: registry.gitlab.com/gitlab-org/cloud-deploy/aws-base:latest
 # Pick zero or more services to be used on all builds.
 # Only needed when using a docker container to run your tests in.
@@ -84,3 +202,5 @@ deploy:
     #- node ./specs/start.js ./specs/db-postgres.spec.js
 variables:
      GIT_SUBMODULE_STRATEGY: normal 
+
+
