--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,9 +2,6 @@ variables:
   # https://hub.docker.com/r/alpine/git/tags
   GIT_VERSION: v2.30.1
 
-  # TODO - Need to move the varables in gitlab CI/CD variables
-  GITLAB_TOKEN: glpat-HghzTu-BX5UALdsZn7B7
-  GITLAB_USERNAME: sidkas
   COMMIT_MESSAGE: Automatic submodule update triggered
   UPDATE_SUBMODULE: 'false'
 
@@ -96,10 +93,28 @@ update:submodule:
     - git submodule update --remote
   stage: update
 
-update:references:
+update:builder:
   trigger:
     branch: '${CI_DEFAULT_BRANCH}'
     project: dtcc-platform/dtcc-builder
+    strategy: depend
+  stage: update
+  variables:
+    UPDATE_SUBMODULE: 'true'
+
+update:core:
+  trigger:
+    branch: '${CI_DEFAULT_BRANCH}'
+    project: dtcc-platform/dtcc-core
+    strategy: depend
+  stage: update
+  variables:
+    UPDATE_SUBMODULE: 'true'
+
+update:model:
+  trigger:
+    branch: '${CI_DEFAULT_BRANCH}'
+    project: dtcc-platform/dtcc-model
     strategy: depend
   stage: update
   variables:
