--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,7 @@ jobs:
 
       - name: Install dependencies and build
         run: |
+          pwd && ls -alt
           sh ./bin/dtcc-build-documentation && cd website && npm install && npm run build
           pwd
           ls
