--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Install dependencies and build
         run:
           #pwd && ls -alt && ls bin/ && cd bin/ && cat build-docs 
-          ./bin/build-docs 
+          ./bin/build-docs && cd website && ls && npm install && npm run build && ls
           #&& cd website && npm install && npm run build
           #pwd
           #ls
