--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,9 @@ on:
   pull_request:
     branches:
       - develop
-
+env:
+  S3_BUCKET: dtccplatform
+  
 jobs:
   build:
     runs-on: ubuntu-latest
