Testing cross repo CI triggers

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,9 @@ name: CI
 
 on:
   push:
+    paths: 
+      - 'docs/**'
+    repo: dtcc-platform/dtcc-docs
     branches:
       - develop
   pull_request:
