--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,12 @@
 name: CI
 
 on:
-  push:
-    branches:
-      - develop
-  pull_request:
-    branches:
-      - develop
+  #push:
+  #  branches:
+  #    - develop
+  #pull_request:
+ #   branches:
+ #     - develop
   workflow_dispatch:
     # Inputs the workflow accepts.
     inputs:
