--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,13 +1,14 @@
 name: CI
 
 on:
-  #push:
-  #  branches:
-  #    - develop
-  #pull_request:
- #   branches:
- #     - develop
-  workflow_dispatch:
+ workflow_dispatch:
+ push:
+    branches:
+      - develop
+ pull_request:
+    branches:
+      - develop
+#  workflow_dispatch:
     # Inputs the workflow accepts.
     inputs:
       name:
