Updated ci.yml with CloudFront invalidation

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,5 +72,6 @@ jobs:
       - name: Deploy to S3
         run: |
           cd website/build
+          aws cloudfront create-invalidation --distribution-id E2X21HEI2MF4EQ --paths "/*" 
           aws s3 ls s3://$S3_BUCKET
           aws s3 sync . s3://$S3_BUCKET
